java: fix warnings from intellij